--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/system": "^5.15.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.58",
